--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: build container to check if it builds
-        run: make build
+        run: make docker
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
