--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - "canon"
-      - "dev"
+      - "next"
     workflow_dispatch:
 
   pull_request:
     branches:
       - "canon"
-      - "dev"
+      - "next"
     workflow_dispatch:
 
 env:
@@ -47,11 +47,12 @@ jobs:
           push: true
           tags: bogdzn/gork:canon, bogdzn/gork:${{ env.APP_VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Build and push dev docker image
-        if: github.ref == 'refs/heads/dev' && github.event_name != 'pull_request'
+
+      - name: Build and push unstable docker image
+        if: github.ref == 'refs/heads/next' && github.event_name != 'pull_request'
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: bogdzn/gork:${{ env.APP_VERSION }}-dev, bogdzn/gork:dev
+          tags: bogdzn/gork:${{ env.APP_VERSION }}-unstable, bogdzn/gork:unstable
           labels: ${{ steps.meta.outputs.labels }}
